fix: fix nav gap and title gradient

--- a/src/common/components/header/Header.scss
+++ b/src/common/components/header/Header.scss
@@ -30,7 +30,8 @@
 .nav-container {
   grid-area: nav;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 8vw;
 }
 
 .sign-container {
@@ -46,16 +47,19 @@
 
 }
 
-@media(max-width:550px) {
+@media(max-width:600px) {
   .nav {
     row-gap: 15px;
     grid-template-columns: repeat(2, 1fr);
     grid-template-areas: 'title buttons'
                           'nav nav';
+
+    background-image: linear-gradient(45deg, $orange, $orange, $blue, $blue, $blue );
   }
 
   .nav-container {
     width: 100%;
+    gap: auto;
   }
 
   .sign-container {
